# NoSQL_Music

./: .env.example  .gitignore  README.md  docker-compose.yml  presentation.html
back/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
back/api/app/: config.py  database.py  main.py  models.py  musicbrainz_client.py
back/api/app/routers/: artists.py  graph.py  importer.py  recordings.py  releases.py  search.py  stats.py
back/api/app/services/: artist_service.py  graph_service.py  import_service.py  recording_service.py  release_service.py  stats_service.py
back/data/seed/: import_artists.txt
back/docs/: data-analysis.md  data-model.md  technical-choices.md
back/scripts/: import_artists.py
frontend/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js  index.js  mockData.js  mocks.js
frontend/src/components/artist/: ArtistCard.jsx
frontend/src/components/charts/: BarListChart.jsx  StatCard.jsx
frontend/src/components/graph/: CollaborationGraph.jsx
frontend/src/components/layout/: AppShell.jsx  BottomNav.jsx  Logo.jsx  Sidebar.jsx
frontend/src/components/release/: ReleaseCard.jsx
frontend/src/components/track/: TrackRow.jsx
frontend/src/components/ui/: Badge.jsx  Card.jsx  EmptyState.jsx  (+2 more)
frontend/src/hooks/: useApi.js
frontend/src/lib/: format.js  nav.js
frontend/src/pages/: ArtistDetailPage.jsx  ArtistsPage.jsx  GraphPage.jsx  HomePage.jsx  NotFoundPage.jsx  SearchPage.jsx  StatsPage.jsx  TracksPage.jsx
