[project]
name = "musicgraph-api"
version = "1.0.0"
description = "API MusicGraph - exploration des collaborations musicales (MusicBrainz + Neo4j)"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "neo4j==5.24.0",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "tenacity==9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

# Ce projet est une application, pas une librairie à publier :
# on dit à uv de ne pas essayer de la construire/installer comme un package.
[tool.uv]
package = false
